# dr-playground

./: .env.example  .gitignore  .gitmodules  2024-LightGBM-dga-multiclass-demo.ipynb  2024-LightGBM-malware-demo.ipynb  2024-LightGBM-malware_with_Norbi.ipynb  2024-LightGBM-phishing-demo-test-cesnet.ipynb  2024-LightGBM-phishing-demo.ipynb  2024-dga-binary-demo.ipynb  ASIACCS-BEST-Classifier-details.ipynb  ASIACCS-Eval-CameraReady.ipynb  ASIACCS-Eval.ipynb  AUTHORS  Aho-Corasick-Test.ipynb  Alternative-classifiers.ipynb  LICENSE  LightGBM-dga-binary-demo.ipynb  LightGBM-dga-demo.ipynb  LightGBM-malware-demo.ipynb  LightGBM-phishing-demo.ipynb  NN_models.ipynb  NOMS-Playground-CameraReady.ipynb  NOMS-Playground.ipynb  NOMS_svm_bayes.ipynb  OLD_Playground.ipynb  Playground.ipynb  README.md  Radek-Playground.ipynb  Radek-Visual.ipynb  Visual.ipynb  __main__.py  config.py  drop_features.py  drop_nontrain.py  encoding_report.md  intersect_parquets.py  loader.py  ngram_freq.json  ngram_freq_dga.json  ngram_freq_malware.json  (+13 more)
CESNET/: Domain_sampling_parquet.ipynb  Domain_sampling_txt.ipynb  append_to_parquet.py  threshold_filter.py  unzip_domain_file.sh
CESNET_filtering/: cesnet_members.regex  domain_filter.sh
VT/: create_collection.py  finished_domain_list.py  livetest.sh  ondra_domains_verified.txt  parquet_lines.py  previous_data_malign.csv  processed_domains_benign.txt  processed_domains_malign.txt  report.md  requirements.txt  (+3 more)
feature_engineering_cli/: pyproject.toml
feature_engineering_cli/feature_engineering_cli/: cli.py  decision_tree  mapping.py  preprocess.py
(+76 files in other folders)
