[tool.poetry]
name = "feature-engineering-cli"
version = "0.1.0"
description = ""
authors = ["Petr PouÄ"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
notebook = ">=6.5.4"
scikit-learn = ">=1.2.2"
xgboost = ">=1.7.5"
matplotlib = ">=3.7.1"
seaborn = ">=0.12.2"
pandas = ">=2.0.0"
pymongoarrow = ">=0.7.0"
python-dotenv = ">=1.0.0"
click = ">=8.1.3"
tldextract = ">=3.2.0"
dnspython = "~=2.3.0"
pymongo = ">=4.4.0"
pyarrow = ">=12.0.1"
nltk = ">=3.8.1"
shap = "~=0.42.1"
numba = "~=0.57.1"
numpy = "~=1.24.4"
PDPbox = ">=0.3.0"
transformers = "^4.35.2"
schema = "^0.7.5"
tabulate = "^0.9.0"
colorama = "^0.4.6"
statsmodels = "^0.14.0"
torch = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
feature-engineering-cli = "feature_engineering_cli.cli:feature_engineering"
